--- a/SW/WiFi-humidifier/data/settings.html
+++ b/SW/WiFi-humidifier/data/settings.html
@@ -8,8 +8,10 @@
     .header a { float: left; color: black; text-align: center; padding: 12px; text-decoration: none; font-size: 18px; line-height: 25px; border-radius: 4px; }
     .header a:hover { background-color: #ddd; color: black; }
     .header a.active { background-color: #4CAF50; color: white; }
-    .form { margin: 20px; }
-    input[type=datetime-local] { padding: 10px; width: 80%; font-size: 18px; margin: 10px 0; }
+    .form { margin: 20px; display: flex; flex-direction: column; align-items: center; }
+    .form-group { display: flex; align-items: center; margin-bottom: 10px; }
+    .form-group label { margin-right: 10px; }
+    input[type=date], input[type=time] { padding: 10px; font-size: 18px; }
     input[type=submit] { padding: 10px 20px; font-size: 18px; cursor: pointer; background-color: #4CAF50; color: white; border: none; }
   </style>
 </head>
@@ -22,8 +24,14 @@
   <div class="form">
     <p>Current Date and Time: {{datetime}}</p>
     <form action="/set_time" method="POST">
-      <label for="datetime">Set Date and Time:</label><br>
-      <input type="datetime-local" id="datetime" name="datetime"><br>
+      <div class="form-group">
+        <label for="date">Set Date:</label>
+        <input type="date" id="date" name="date" value="{{current_date}}">
+      </div>
+      <div class="form-group">
+        <label for="time">Set Time:</label>
+        <input type="time" id="time" name="time" value="{{current_time}}">
+      </div>
       <input type="submit" value="Set Time">
     </form>
   </div>
