--- a/SW/WiFi-humidifier/data/settings.html
+++ b/SW/WiFi-humidifier/data/settings.html
@@ -26,13 +26,13 @@
     <form action="/set_time" method="POST">
       <div class="form-group">
         <label for="date">Set Date:</label>
-        <input type="date" id="date" name="date" value="{{current_date}}">
+        <input type="date" id="date" name="date" value="{{current_date}}" {{disable_controls}}>
       </div>
       <div class="form-group">
         <label for="time">Set Time:</label>
-        <input type="time" id="time" name="time" value="{{current_time}}">
+        <input type="time" id="time" name="time" value="{{current_time}}" {{disable_controls}}>
       </div>
-      <input type="submit" value="Set Time">
+      <input type="submit" value="Set Time" {{disable_controls}}>
     </form>
   </div>
 </body>
