--- a/SW/WiFi-humidifier/data/index.html
+++ b/SW/WiFi-humidifier/data/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ESP8266 Control</title>
+  <title>ESP8266 Dashboard</title>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; }
-    .button { padding: 10px 20px; font-size: 20px; cursor: pointer; }
-    .on { background-color: #4CAF50; color: white; }
-    .off { background-color: #f44336; color: white; }
     .header { overflow: hidden; background-color: #f1f1f1; padding: 20px 10px; }
     .header a { float: left; color: black; text-align: center; padding: 12px; text-decoration: none; font-size: 18px; line-height: 25px; border-radius: 4px; }
     .header a:hover { background-color: #ddd; color: black; }
     .header a.active { background-color: #4CAF50; color: white; }
+    .button { padding: 10px 20px; font-size: 20px; cursor: pointer; }
+    .on { background-color: #4CAF50; color: white; }
+    .off { background-color: #f44336; color: white; }
+    .form { margin: 20px; display: flex; flex-direction: column; align-items: center; }
+    .form-group { display: flex; align-items: center; margin-bottom: 10px; }
+    .form-group label { margin-right: 10px; }
+    input[type=date], input[type=time], input[type=number] { padding: 10px; font-size: 18px; }
+    input[type=submit], button { padding: 10px 20px; font-size: 18px; cursor: pointer; background-color: #4CAF50; color: white; border: none; }
+    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+    table, th, td { border: 1px solid black; }
+    th, td { padding: 15px; text-align: left; }
   </style>
 </head>
 <body>
@@ -19,7 +27,40 @@
     <a href="/settings">Settings</a>
   </div>
   <h1>ESP8266 LED Control</h1>
-  <p><button class="button on" onclick="location.href='/led/on'">Turn On</button></p>
-  <p><button class="button off" onclick="location.href='/led/off'">Turn Off</button></p>
+  <div class="form">
+    <p><button class="button on" onclick="location.href='/led/on'">Turn On</button></p>
+    <p><button class="button off" onclick="location.href='/led/off'">Turn Off</button></p>
+  </div>
+  <h1>ESP8266 Timer Control</h1>
+  <div class="form">
+    <form action="/add_timer" method="POST">
+      <div class="form-group">
+        <label for="days">Days:</label>
+        <input type="text" id="days" name="days" placeholder="e.g., 1,2,3,4,5,6,7">
+      </div>
+      <div class="form-group">
+        <label for="time">Time:</label>
+        <input type="time" id="time" name="time">
+      </div>
+      <div class="form-group">
+        <label for="duration">Duration (minutes):</label>
+        <input type="number" id="duration" name="duration" min="1">
+      </div>
+      <input type="submit" value="Add Timer">
+    </form>
+    <table>
+      <thead>
+        <tr>
+          <th>Days</th>
+          <th>Time</th>
+          <th>Duration</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody id="timerList">
+        <!-- Timer entries will be dynamically inserted here -->
+      </tbody>
+    </table>
+  </div>
 </body>
 </html>
